Unescape location URI in properties dialog. Fixes #693794

Shows an user-friendly filename (URI) in the properties dialog.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=693794

Signed-off-by: Germán Poo-Caamaño <gpoo@gnome.org>